tests/lean/syntheticHolesAsPatterns.lean.expected.out
syntheticHolesAsPatterns.lean:7:30-7:31: error: Placeholder could not be inferred.

context:
α✝ β : Type
a✝ : α✝
x : Fam2 α✝ β
α : Type
a : α
⊢ α
syntheticHolesAsPatterns.lean:8:30-8:31: error: Placeholder could not be inferred.

context:
α β : Type
a✝ : α
x : Fam2 α β
a n : Nat
⊢ Nat
syntheticHolesAsPatterns.lean:12:18-12:19: error: Placeholder could not be inferred.

context:
α✝ β : Type
x : Fam2 α✝ β
α : Type
a : α
⊢ α
syntheticHolesAsPatterns.lean:13:18-13:19: error: Placeholder could not be inferred.

context:
α β : Type
x : Fam2 α β
n a : Nat
⊢ Nat
